// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="date"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="date_date_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="date_date"
          list={null}
          name="date_date"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="date"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="time"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="time_time_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="time_time"
          list={null}
          name="time_time"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="time"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="datetime"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="datetime_date_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="datetime_date"
            list={null}
            name="datetime_date"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="date"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="datetime_time_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="datetime_time"
            list={null}
            name="datetime_time"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="time"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
      </section>
    </section>
  </section>
</form>
`;

exports[` 2`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateDefault"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="dateDefault_date_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="dateDefault_date"
          list={null}
          name="dateDefault_date"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="date"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateRequired"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="dateRequired_date_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label (required)
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="dateRequired_date"
          list={null}
          name="dateRequired_date"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="date"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateDisabled"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
        id="dateDisabled_date_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 gBQbXI"
          cols=""
          disabled={true}
          id="dateDisabled_date"
          list={null}
          name="dateDisabled_date"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="date"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateError"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
        id="dateError_date_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 ewEYun"
          cols=""
          disabled={false}
          id="dateError_date"
          list={null}
          name="dateError_date"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="date"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateError"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="dateError_date_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="dateError_date"
          list={null}
          name="dateError_date"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="date"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
        <section
          className="TextInput__MessageContainer-sc-1fep8p8-1 fiNdGb"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            This is a warning
          </p>
        </section>
      </section>
    </section>
  </section>
</form>
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="timeDefault"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="timeDefault_time_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="timeDefault_time"
          list={null}
          name="timeDefault_time"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="time"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="timeRequired"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
        id="timeRequired_time_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label (required)
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 fYseJG"
          cols=""
          disabled={false}
          id="timeRequired_time"
          list={null}
          name="timeRequired_time"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="time"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="timeDisabled"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
        id="timeDisabled_time_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 gBQbXI"
          cols=""
          disabled={true}
          id="timeDisabled_time"
          list={null}
          name="timeDisabled_time"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="time"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="timeError"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
        id="timeError_time_container"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 ewEYun"
          cols=""
          disabled={false}
          id="timeError_time"
          list={null}
          name="timeError_time"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="time"
          value={null}
        />
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
        <section
          className="TextInput__MessageContainer-sc-1fep8p8-1 fiNdGb"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Don't sweat it...we can fix this!
          </p>
        </section>
      </section>
    </section>
  </section>
</form>
`;

exports[` 4`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="datetimeDefault"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="datetimeDefault_date_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="datetimeDefault_date"
            list={null}
            name="datetimeDefault_date"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="date"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="datetimeDefault_time_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="datetimeDefault_time"
            list={null}
            name="datetimeDefault_time"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="time"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateTimeRequired"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="dateTimeRequired_date_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label (required)
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="dateTimeRequired_date"
            list={null}
            name="dateTimeRequired_date"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="date"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="dateTimeRequired_time_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label (required)
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="dateTimeRequired_time"
            list={null}
            name="dateTimeRequired_time"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="time"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="datetimeDisabled"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
          id="datetimeDisabled_date_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 gBQbXI"
            cols=""
            disabled={true}
            id="datetimeDisabled_date"
            list={null}
            name="datetimeDisabled_date"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="date"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
          id="datetimeDisabled_time_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 gBQbXI"
            cols=""
            disabled={true}
            id="datetimeDisabled_time"
            list={null}
            name="datetimeDisabled_time"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="time"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateTimeError"
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
          id="dateTimeError_date_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 ewEYun"
            cols=""
            disabled={false}
            id="dateTimeError_date"
            list={null}
            name="dateTimeError_date"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="date"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
          <section
            className="TextInput__MessageContainer-sc-1fep8p8-1 fiNdGb"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              id={null}
              letterSpacing="0.2px"
            >
              Don't sweat it...we can fix this!
            </p>
          </section>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
          id="dateTimeError_time_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Date-Time Input Label
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 ewEYun"
            cols=""
            disabled={false}
            id="dateTimeError_time"
            list={null}
            name="dateTimeError_time"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="time"
            value={null}
          />
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
          <section
            className="TextInput__MessageContainer-sc-1fep8p8-1 fiNdGb"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              id={null}
              letterSpacing="0.2px"
            >
              Don't sweat it...we can fix this!
            </p>
          </section>
        </section>
      </section>
    </section>
  </section>
</form>
`;
